# Delivery-Management-System-API

./: .env  .gitignore  README.md  pyproject.toml  shipments.json  sqlite.db  test.py
app/: config.py  database.py  main.py  schema.py  utils.py
app/api/: dependencies.py  router.py
app/api/core/: security.py
app/api/routers/: delivery_partner.py  seller.py  shipment.py
app/api/schemas/: delivery_partner.py  seller.py  shipment.py
app/database/: models.py  redis.py  session.py
app/services/: base.py  delivery_partner.py  notification.py  seller.py  shipment.py  shipment_event.py  user.py
app/templates/: mail_cancelled.html  mail_delivered.html  mail_out_for_delivery.html  mail_placed.html  mail_verification.html
app/tests/: test_main.py  test_shipment.py
app/worker/: tasks.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  utils.py
backend/app/api/: dependencies.py
backend/app/database/: models.py
backend/app/services/: delivery_partner.py  notification.py  seller.py  shipment.py  shipment_event.py  user.py
backend/app/templates/: mail_out_for_delivery.html  mail_out_for_delivery_otp.html  mail_password_reset.html  mail_placed.html  password_reset_form.html  review.html  track.html
backend/app/tests/: conftest.py  example.py
backend/migrations/: env.py
frontend/: package-lock.json  package.json
frontend/app/: root.tsx  routes.ts
migrations/versions/: 4af016d81db5_added_shipment_event_table.py  9f5f7e048031_add_client_contact_fields.py
(+40 files in other folders)
