[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.14",
    "greenlet>=3.2.3",
    "pydantic-settings>=2.10.1",
    "scalar-fastapi>=1.0.3",
    "sqlmodel>=0.0.24",
]
